--- a/LibraryBindings/SlyceMessaging.Bindings/Xamarin.Bindings.SlyceMessaging.csproj
+++ b/LibraryBindings/SlyceMessaging.Bindings/Xamarin.Bindings.SlyceMessaging.csproj
@@ -108,13 +108,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Additions\Additions.cs" />
+    <Compile Include="Additions\LoadMoreMessagesListenerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
-    <LibraryProjectZip Include="SlyceMessaging-1.1.2.aar" />
     <None Include="packages.config" />
+    <LibraryProjectZip Include="slyce-messaging-release.aar" />
   </ItemGroup>
   <ItemGroup>
     <TransformFile Include="Transforms\Metadata.xml" />
