--- a/nuspec/Xamarin.Bindings.SlyceMessaging.nuspec
+++ b/nuspec/Xamarin.Bindings.SlyceMessaging.nuspec
@@ -2,14 +2,15 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>Xamarin.Bindings.SlyceMessaging</id>
-		<version>1.1.2-beta1</version>
+		<version>1.1.3-beta1</version>
 		<title>Xamarin.Bindings.SlyceMessaging</title>
 		<authors>Orginal Library - Slyce-Inc</authors>
 		<licenseUrl>https://github.com/Slyce-Inc/SlyceMessaging/blob/master/LICENSE</licenseUrl>
 		<projectUrl>https://github.com/thefex/Xamarin.Bindings.SlyceMessaging</projectUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>
-      Xamarin Bindings library for https://github.com/Slyce-Inc/SlyceMessaging/
+      Xamarin Bindings library for https://github.com/Slyce-Inc/SlyceMessaging/ bug-fixed fork:
+      https://github.com/thefex/SlyceMessaging
     </description>
 		<tags>xamarin android</tags>
 		<frameworkAssemblies>
@@ -34,8 +35,8 @@
         <dependency id="Xamarin.Android.Support.Vector.Drawable" version="[25.1.0-beta2,)"  />
         <dependency id="Xamarin.Bindings.CircleImageView" version="2.1.0"  />
         <dependency id="Xamarin.Build.Download" version="0.4.1" />
-        <dependency id="Xamarin.Bindings.RoundedImageView" version="2.2.1"  />
-        <dependency id="Xamarin.Bindings.Cwac.Cam2" version="0.6.2" />
+        <dependency id="Xamarin.Bindings.RoundedImageView" version="2.3.0"  />
+        <dependency id="Xamarin.Bindings.Cwac.Cam2" version="0.7.3" />
       </group>
     </dependencies>
 	</metadata>
