Updated to MvvmCross 5.0

--- a/TestProject/Sample/packages.config
+++ b/TestProject/Sample/packages.config
@@ -1,29 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FAB.XamarinAndroid" version="1.6.4.0" targetFramework="monoandroid70" />
-  <package id="Glide.Xamarin" version="3.7.0" targetFramework="monoandroid70" />
-  <package id="MvvmCross" version="4.4.0" targetFramework="monoandroid70" />
-  <package id="MvvmCross.Binding" version="4.4.0" targetFramework="monoandroid70" />
-  <package id="MvvmCross.Core" version="4.4.0" targetFramework="monoandroid70" />
-  <package id="MvvmCross.Droid.Shared" version="4.4.0" targetFramework="monoandroid70" />
-  <package id="MvvmCross.Droid.Support.Core.UI" version="4.4.0" targetFramework="monoandroid70" />
-  <package id="MvvmCross.Droid.Support.Fragment" version="4.4.0" targetFramework="monoandroid70" />
-  <package id="MvvmCross.Droid.Support.V7.AppCompat" version="4.4.0" targetFramework="monoandroid70" />
-  <package id="MvvmCross.Platform" version="4.4.0" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.Compat" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.Core.UI" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.Design" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.Fragment" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.Media.Compat" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.Percent" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.Transition" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.v13" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.v4" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="24.2.1" targetFramework="monoandroid70" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="24.2.1" targetFramework="monoandroid70" />
+  <package id="Glide.Xamarin" version="3.8.0" targetFramework="monoandroid71" />
+  <package id="MvvmCross" version="5.0.6" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Binding" version="5.0.6" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Core" version="5.0.6" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Droid.Shared" version="5.0.6" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Droid.Support.Core.UI" version="5.0.6" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Droid.Support.Fragment" version="5.0.6" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Droid.Support.V7.AppCompat" version="5.0.6" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Platform" version="5.0.6" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Design" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Fragment" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Percent" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Transition" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v13" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v4" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Bindings.CircleImageView" version="2.1.0" targetFramework="monoandroid70" />
-  <package id="Xamarin.Build.Download" version="0.4.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Build.Download" version="0.4.6" targetFramework="monoandroid71" />
 </packages>
