--- a/nuspec/MvvmCross.Bindings.SlyceMessaging.nuspec
+++ b/nuspec/MvvmCross.Bindings.SlyceMessaging.nuspec
@@ -2,13 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>MvvmCross.Bindings.SlyceMessaging</id>
-		<version>1.1-beta1</version>
+		<version>1.1</version>
 		<title>MvvmCross.Bindings.SlyceMessaging</title>
 		<authors>Przemyslaw Raciborski [thefex]</authors>
     <projectUrl>https://github.com/thefex/Xamarin.Bindings.SlyceMessaging</projectUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>
-      Mvx Wrapper for SlyceMessaging library.
+      MvvmCross Wrapper for SlyceMessaging library.
     </description>
 		<tags>xamarin android mvvmcross</tags>
 		<frameworkAssemblies>
@@ -16,15 +16,15 @@
 		</frameworkAssemblies>
 		<dependencies>
       <group targetFramework="monoandroid70">
-        <dependency id="MvvmCross.Binding" version="4.4.0" />
-        <dependency id="MvvmCross.Core" version="4.4.0" />
-        <dependency id="MvvmCross.Platform" version="4.4.0" />
-        <dependency id="Xamarin.Bindings.SlyceMessaging" version="1.1.3-beta1" />
+        <dependency id="MvvmCross.Binding" version="5.0.6" />
+        <dependency id="MvvmCross.Core" version="5.0.6" />
+        <dependency id="MvvmCross.Platform" version="5.0.6" />
+        <dependency id="Xamarin.Bindings.SlyceMessaging" version="1.1.3" />
       </group>
     </dependencies>
 	</metadata>
 	<files>		
-		<file src="..\Mvx\MvvmCross.Bindings.SlyceMessaging\bin\Release\MvvmCross.Bindings.SlyceMessaging.dll" target="lib\MonoAndroid" />
+		<file src="../Mvx/MvvmCross.Bindings.SlyceMessaging/bin/Release/MvvmCross.Bindings.SlyceMessaging.dll" target="lib\MonoAndroid" />
 	</files>
 </package>
 
