--- a/nuspec/Xamarin.Bindings.SlyceMessaging.nuspec
+++ b/nuspec/Xamarin.Bindings.SlyceMessaging.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>Xamarin.Bindings.SlyceMessaging</id>
-		<version>1.1.3-beta1</version>
+		<version>1.1.3</version>
 		<title>Xamarin.Bindings.SlyceMessaging</title>
 		<authors>Orginal Library - Slyce-Inc</authors>
 		<licenseUrl>https://github.com/Slyce-Inc/SlyceMessaging/blob/master/LICENSE</licenseUrl>
@@ -20,28 +20,28 @@
       <group targetFramework="monoandroid70">
         <dependency id="FAB.XamarinAndroid" version="1.6.4.0"/>
         <dependency id="Glide.Xamarin" version="3.7.0" />
-        <dependency id="Xamarin.Android.Support.Animated.Vector.Drawable" version="[25.1.0-beta2,)"  />
-        <dependency id="Xamarin.Android.Support.Compat" version="[25.1.0-beta2,)"   />
-        <dependency id="Xamarin.Android.Support.Core.UI" version="[25.1.0-beta2,)" />
-        <dependency id="Xamarin.Android.Support.Core.Utils" version="[25.1.0-beta2,)"   />
-        <dependency id="Xamarin.Android.Support.Design"  version="[25.1.0-beta2,)"   />
-        <dependency id="Xamarin.Android.Support.Fragment" version="[25.1.0-beta2,)"  />
-        <dependency id="Xamarin.Android.Support.Media.Compat" version="[25.1.0-beta2,)"   />
-        <dependency id="Xamarin.Android.Support.Percent" version="[25.1.0-beta2,)"  />
-        <dependency id="Xamarin.Android.Support.Transition" version="[25.1.0-beta2,)"  />
-        <dependency id="Xamarin.Android.Support.v13" version="[25.1.0-beta2,)"  />
-        <dependency id="Xamarin.Android.Support.v7.AppCompat" version="[25.1.0-beta2,)" />
-        <dependency id="Xamarin.Android.Support.v7.RecyclerView" version="[25.1.0-beta2,)"   />
-        <dependency id="Xamarin.Android.Support.Vector.Drawable" version="[25.1.0-beta2,)"  />
+        <dependency id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1"  />
+        <dependency id="Xamarin.Android.Support.Compat" version="25.3.1"  />
+        <dependency id="Xamarin.Android.Support.Core.UI" version="25.3.1" />
+        <dependency id="Xamarin.Android.Support.Core.Utils" version="25.3.1"  />
+        <dependency id="Xamarin.Android.Support.Design"  version="25.3.1"  />
+        <dependency id="Xamarin.Android.Support.Fragment" version="25.3.1" />
+        <dependency id="Xamarin.Android.Support.Media.Compat" version="25.3.1"   />
+        <dependency id="Xamarin.Android.Support.Percent" version="25.3.1"  />
+        <dependency id="Xamarin.Android.Support.Transition" version="25.3.1"  />
+        <dependency id="Xamarin.Android.Support.v13" version="25.3.1"  />
+        <dependency id="Xamarin.Android.Support.v7.AppCompat" version="25.3.1" />
+        <dependency id="Xamarin.Android.Support.v7.RecyclerView" version="25.3.1" />
+        <dependency id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" />
         <dependency id="Xamarin.Bindings.CircleImageView" version="2.1.0"  />
-        <dependency id="Xamarin.Build.Download" version="0.4.1" />
+        <dependency id="Xamarin.Build.Download" version="0.4.3" />
         <dependency id="Xamarin.Bindings.RoundedImageView" version="2.3.0"  />
         <dependency id="Xamarin.Bindings.Cwac.Cam2" version="0.7.3" />
       </group>
     </dependencies>
 	</metadata>
 	<files>		
-		<file src="..\LibraryBindings\SlyceMessaging.Bindings\bin\Release\Xamarin.Bindings.SlyceMessaging.dll" target="lib\MonoAndroid" />
+		<file src="../LibraryBindings/SlyceMessaging.Bindings/bin/Release/Xamarin.Bindings.SlyceMessaging.dll" target="lib\MonoAndroid" />
 	</files>
 </package>
 
